--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-native": "^0.73.5",
     "react-native-view-shot": "^3.8.0",
-    "tesseract.js": "^5.0.4"
+    "tesseract.js": "^5.0.5"
   }
 }
